Fix bottom of list view cutoff for view toggle button

--- a/src/features/explore/Explore.css
+++ b/src/features/explore/Explore.css
@@ -55,6 +55,7 @@
     grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
     grid-gap: 2rem;
     padding-top: 1rem;
+    padding-bottom: 5rem;
 }
 
 .explore-tile {
